<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SampleRegistrationActivity">

    <ViewSwitcher
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewSwitcher">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:editable="false"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/new_project"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLength="64"
                android:textColor="#073642"
                android:textColorHint="#93a1a1"
                android:hint="@string/project_name"
                android:id="@+id/etNewProj"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/listView"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:textColor="#073642"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/tvProjName"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:layout_marginTop="8dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#0054BB"
                    android:text="@string/last_gps_information_received"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:editable="false"
                    android:textColorHint="#2aa198"
                    android:hint="@string/provider_not_available"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#2aa198"
                    android:id="@+id/tvCurrentProvider"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:editable="false"
                    android:textColorHint="#2aa198"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#2aa198"
                    android:id="@+id/tvCurrentFix"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:editable="false"
                    android:textColorHint="#2aa198"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#2aa198"
                    android:id="@+id/tvCurrentAcc"/>

            </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:textColorHint="#2aa198"
                    android:hint="@string/last_gps_date_not_available"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#2aa198"
                    android:id="@+id/tvLastDate"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:layout_marginRight="5dp"
                    android:text="@string/latitude"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#2aa198" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:textColorHint="#2aa198"
                    android:hint="@string/last_gps_latitude_not_available"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#2aa198"
                    android:id="@+id/tvCurrentLatitude"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:editable="false"
                    android:text="@string/longitude"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#2aa198" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:textColorHint="#2aa198"
                    android:hint="@string/last_gps_longitude_not_available"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#2aa198"
                    android:id="@+id/tvCurrentLongitude"/>
            </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:editable="false"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#0054BB"
                    android:text="@string/next_sample_information"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:editable="false"
                        android:textColor="#073642"
                        android:text="@string/id"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:editable="false"
                        android:textColor="#073642"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/tvDataId"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:textColor="#073642"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/tvNextId"/>
                </LinearLayout>

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:maxLength="64"
                    android:textColor="#073642"
                    android:textColorHint="#93a1a1"
                    android:hint="@string/sample_type"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/etMeasurementValue"
                    android:id="@+id/etNextSampleType"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:maxLength="64"
                        android:textColor="#073642"
                        android:textColorHint="#93a1a1"
                        android:hint="@string/value"
                        android:nextFocusDown="@+id/etMeasurementUnit"
                        android:id="@+id/etMeasurementValue"/>

                    <AutoCompleteTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:maxLength="64"
                        android:textColor="#073642"
                        android:textColorHint="#93a1a1"
                        android:hint="@string/unit"
                        android:imeOptions="actionNext"
                        android:id="@+id/etMeasurementUnit"/>
                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLength="64"
                    android:minWidth="100dp"
                    android:textColor="#073642"
                    android:textColorHint="#93a1a1"
                    android:hint="@string/station"
                    android:id="@+id/etStation"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLength="128"
                    android:minWidth="100dp"
                    android:textColor="#073642"
                    android:textColorHint="#93a1a1"
                    android:hint="@string/comment"
                    android:id="@+id/etNextComment"/>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:id="@+id/btnBack"
                android:text="@string/back"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:id="@+id/btnNextId"
                android:text="@string/store_next_sample"/>
        </FrameLayout>
    </ViewSwitcher>
</RelativeLayout>
